@@ -29,6 +29,7 @@ import org.tranquility.seedreporter.filters.PlanetFilter;
 import org.tranquility.seedreporter.filters.StarSystemFilter;
 
 import java.io.IOException;
+import java.time.LocalDate;
 import java.util.*;
 
 import static com.fs.starfarer.api.impl.campaign.procgen.themes.SalvageSpecialAssigner.MAX_EXCEPTIONAL_PODS_OFFICERS;
@@ -47,8 +48,6 @@ public class SEEDReport {
     private static String tesseractStarSystemFilter;
     private static boolean loadedSettings;
 
-    private Vector2f centerOfMass;
-
     /**
      * Reloads the "seedreporter" field in seedreporterSettings.json
      */
@@ -64,8 +63,9 @@ public class SEEDReport {
         }
 
         JSONObject starSystemFilterList = modSettings.optJSONObject("starSystemFilters");
+        Set<String> usedPlanetFilters = new HashSet<>(); // To ensure only used planet filters are loaded
         if (starSystemFilterList != null) {
-            starSystemFilterMap = new LinkedHashMap<>();
+            starSystemFilterMap = new LinkedHashMap<>(); // LinkedHashMap to maintain filter order
 
             // Check if execution order is specified
             JSONArray executionOrder = modSettings.optJSONArray("starSystemFilterExecutionOrder");
@@ -82,9 +82,15 @@ public class SEEDReport {
                         if (starSystemFilterSetting.optBoolean("isEnabled", true)) {
                             StarSystemFilter newFilter = new StarSystemFilter(starSystemFilterSetting);
                             starSystemFilterMap.put(filterId, newFilter);
+
+                            if (newFilter.hasPlanetsRequired != null)
+                                usedPlanetFilters.addAll(newFilter.hasPlanetsRequired.keySet());
+                            if (newFilter.hasPlanetsOneOf != null) usedPlanetFilters.addAll(newFilter.hasPlanetsOneOf);
+                            if (newFilter.hasPlanetsOptional != null)
+                                usedPlanetFilters.addAll(newFilter.hasPlanetsOptional);
                         }
                     } else
-                        Global.getLogger(SEEDReport.class).warn("Filter '" + filterId + "' in execution order not found in starSystemFilters");
+                        Global.getLogger(SEEDReport.class).warn("Filter '%s' in execution order not found in starSystemFilters".formatted(filterId));
                 }
 
                 // Warn about filters defined but not in execution order
@@ -93,7 +99,7 @@ public class SEEDReport {
                     if (!starSystemFilterMap.containsKey(filterId)) {
                         JSONObject filterSettings = starSystemFilterList.optJSONObject(filterId);
                         if (filterSettings != null && filterSettings.optBoolean("isEnabled", true))
-                            Global.getLogger(SEEDReport.class).warn("Enabled filter '" + filterId + "' not in execution order - will not run");
+                            Global.getLogger(SEEDReport.class).warn("Enabled filter '%s' not in execution order - will not run".formatted(filterId));
                     }
                 }
             } else {
@@ -120,11 +126,11 @@ public class SEEDReport {
             planetFilterMap = new HashMap<>();
             for (Iterator<String> iter = planetFilterList.keys(); iter.hasNext(); ) {
                 String filterId = iter.next();
+                if (!usedPlanetFilters.contains(filterId)) continue;
 
                 JSONObject planetFilterSetting = planetFilterList.optJSONObject(filterId);
                 if (planetFilterSetting == null) continue;
 
-                // Load all planet filters
                 PlanetFilter newFilter = new PlanetFilter(planetFilterSetting);
                 planetFilterMap.put(filterId, newFilter);
             }
@@ -148,7 +154,7 @@ public class SEEDReport {
     public String run() {
         if (!loadedSettings) reloadSettings();
 
-        centerOfMass = CommodityMarketData.computeCenterOfMass(null, null);
+        Vector2f centerOfMass = CommodityMarketData.computeCenterOfMass(null, null);
 
         // Run all planet filters
         Map<String, Map<StarSystemAPI, Set<PlanetAPI>>> planetFilterResults = new HashMap<>();
@@ -169,17 +175,17 @@ public class SEEDReport {
         boolean exceptionalFilterPass = exceptionalFilter.run(officersInSalvage);
 
         StringBuilder print = new StringBuilder();
-        print.append(String.format(REPORT_BORDER, Global.getSector().getSeedString()));
-        print.append(String.format("\nMarket center of mass: (%.2f, %.2f)\n", centerOfMass.getX() / GRID_SIZE_MAP_UNITS, centerOfMass.getY() / GRID_SIZE_MAP_UNITS));
+        print.append(REPORT_BORDER.formatted(Global.getSector().getSeedString()));
+        print.append("\nMarket center of mass: (%.2f, %.2f)\n".formatted(centerOfMass.getX() / GRID_SIZE_MAP_UNITS, centerOfMass.getY() / GRID_SIZE_MAP_UNITS));
 
         // Printing star system filter lists
         StringBuilder filterShorthand = new StringBuilder();
         for (String filterId : starSystemListMap.keySet()) {
             StarSystemFilter systemFilter = starSystemFilterMap.get(filterId);
-            print.append(String.format(SECTION_TITLE_BORDER, systemFilter.saveShorthand != null ? "{%s} ".formatted(systemFilter.saveShorthand) + systemFilter.filterName : systemFilter.filterName));
+            print.append(SECTION_TITLE_BORDER.formatted(systemFilter.saveShorthand != null ? "{%s} ".formatted(systemFilter.saveShorthand) + systemFilter.filterName : systemFilter.filterName));
 
             for (StarSystemAPI system : starSystemListMap.get(filterId)) {
-                print.append(String.format("%s - %s\n", getHyperspaceCoordinates(system), system.getName()));
+                print.append("%s - %s\n".formatted(getHyperspaceCoordinates(centerOfMass, system), system.getName()));
 
                 // If this filter specifies planet requirements, show which planets matched
                 boolean containsPlanetsRequired = systemFilter.hasPlanetsRequired != null && !systemFilter.hasPlanetsRequired.isEmpty();
@@ -234,8 +240,8 @@ public class SEEDReport {
                         Set<String> filterNames = planetToFilterNames.get(planet);
                         String filterNameStr = filterNames != null ? String.join(", ", filterNames) : "";
                         if (planet.getMarket() != null) // Stars have no markets
-                            print.append(String.format("  %.0f%%, %s (%s)\n", planet.getMarket().getHazardValue() * 100f, planet.getName(), filterNameStr));
-                        else print.append(String.format("  %s (%s)\n", planet.getName(), filterNameStr));
+                            print.append("  %.0f%%, %s (%s)\n".formatted(planet.getMarket().getHazardValue() * 100f, planet.getName(), filterNameStr));
+                        else print.append("  %s (%s)\n".formatted(planet.getName(), filterNameStr));
                     }
 
                     // Print optional planets (with + prefix)
@@ -244,8 +250,8 @@ public class SEEDReport {
                             Set<String> filterNames = planetToFilterNames.get(planet);
                             String filterNameStr = filterNames != null ? String.join(", ", filterNames) : "";
                             if (planet.getMarket() != null) // Stars have no markets
-                                print.append(String.format("  + %.0f%%, %s (%s)\n", planet.getMarket().getHazardValue() * 100f, planet.getName(), filterNameStr));
-                            else print.append(String.format("  + %s (%s)\n", planet.getName(), filterNameStr));
+                                print.append("  + %.0f%%, %s (%s)\n".formatted(planet.getMarket().getHazardValue() * 100f, planet.getName(), filterNameStr));
+                            else print.append("  + %s (%s)\n".formatted(planet.getName(), filterNameStr));
                         }
                 }
 
@@ -258,7 +264,7 @@ public class SEEDReport {
                             if (maxDistance <= 0f) {
                                 // System IS in the filter
                                 StarSystemFilter requiredFilter = starSystemFilterMap.get(systemFilterId);
-                                print.append(String.format("  * Matches '%s'\n", requiredFilter.filterName));
+                                print.append("  * Matches '%s'\n".formatted(requiredFilter.filterName));
                             } else {
                                 // Find nearest system for display
                                 StarSystemAPI nearestSystem = null;
@@ -272,7 +278,7 @@ public class SEEDReport {
                                 }
                                 if (nearestSystem != null) {
                                     StarSystemFilter requiredFilter = starSystemFilterMap.get(systemFilterId);
-                                    print.append(String.format("  * Within %.1f LY of '%s' (%s)\n", nearestDistance, requiredFilter.filterName, nearestSystem.getName()));
+                                    print.append("  * Within %.1f LY of '%s' (%s)\n".formatted(nearestDistance, requiredFilter.filterName, nearestSystem.getName()));
                                 }
                             }
                         }
@@ -303,9 +309,9 @@ public class SEEDReport {
                             if (isNear) {
                                 StarSystemFilter optionalFilter = starSystemFilterMap.get(systemFilterId);
                                 if (maxDistance <= 0f)
-                                    print.append(String.format("  + Matches '%s'\n", optionalFilter.filterName));
+                                    print.append("  + Matches '%s'\n".formatted(optionalFilter.filterName));
                                 else
-                                    print.append(String.format("  + Within %.1f LY of '%s' (%s)\n", nearestDistance, optionalFilter.filterName, nearestSystem.getName()));
+                                    print.append("  + Within %.1f LY of '%s' (%s)\n".formatted(nearestDistance, optionalFilter.filterName, nearestSystem.getName()));
 
                             }
                         }
@@ -320,12 +326,12 @@ public class SEEDReport {
 
         // Printing exceptional officers
         StringBuilder exceptionalShorthand = new StringBuilder("[");
-        print.append(String.format(SECTION_TITLE_BORDER, "Exceptional officer pods"));
+        print.append(SECTION_TITLE_BORDER.formatted("Exceptional officer pods"));
         if (officersInSalvage.isEmpty()) print.append("No exceptional officer pods found!\n");
         for (SectorEntityToken entity : officersInSalvage) {
             PersonAPI officer = ((SleeperPodsSpecial.SleeperPodsSpecialData) entity.getMemoryWithoutUpdate().get(MemFlags.SALVAGE_SPECIAL_DATA)).officer;
 
-            print.append(String.format("%s - %s in %s (%s)\n  ", getHyperspaceCoordinates(entity.getContainingLocation()), officer.getName().getFullName(), entity.getFullName(), entity.getContainingLocation().getName()));
+            print.append("%s - %s in %s (%s)\n  ".formatted(getHyperspaceCoordinates(centerOfMass, entity.getContainingLocation()), officer.getName().getFullName(), entity.getFullName(), entity.getContainingLocation().getName()));
 
             for (SkillLevelAPI skill : officer.getStats().getSkillsCopy())
                 if (skill.getSkill().isCombatOfficerSkill()) {
@@ -349,10 +355,10 @@ public class SEEDReport {
         StringBuilder variantShorthand = new StringBuilder();
         boolean sameTesseractVariants = false;
         if (tesseractStarSystemFilter != null) {
-            print.append(String.format(SECTION_TITLE_BORDER, "Tesseract variants"));
+            print.append(SECTION_TITLE_BORDER.formatted("Tesseract variants"));
             Set<String> variants = new HashSet<>();
             for (StarSystemAPI system : starSystemListMap.get(tesseractStarSystemFilter)) {
-                print.append(String.format("%s - %s\n", getHyperspaceCoordinates(system), system.getName()));
+                print.append("%s - %s\n".formatted(getHyperspaceCoordinates(centerOfMass, system), system.getName()));
 
                 for (SectorEntityToken entity : system.getAllEntities()) {
                     if (!entity.hasTag(Tags.CORONAL_TAP)) continue;
@@ -370,7 +376,7 @@ public class SEEDReport {
                         ShipVariantAPI variant = member.getVariant();
                         String variantId = variant.getHullVariantId();
                         variants.add(variantId);
-                        print.append(String.format("  %s (%s)\n", variant.getDisplayName(), variantId));
+                        print.append("  %s (%s)\n".formatted(variant.getDisplayName(), variantId));
                         variantShorthand.append(variantId.charAt(variantId.indexOf("_") + 1)).append(variantId.charAt(variantId.length() - 1));
                     }
                 }
@@ -378,25 +384,20 @@ public class SEEDReport {
             if (variants.size() == 1) sameTesseractVariants = true;
         }
 
-        print.append(String.format(REPORT_BORDER, Global.getSector().getSeedString()));
+        print.append(REPORT_BORDER.formatted(Global.getSector().getSeedString()));
 
         if (!filterShorthand.isEmpty() || exceptionalFilterPass || sameTesseractVariants) {
             String seedString = createSeedString(exceptionalFilterPass, sameTesseractVariants, exceptionalShorthand, variantShorthand, filterShorthand);
             try {
-                JSONObject json;
-                if (Global.getSettings().fileExistsInCommon(REPORT_FILE_NAME)) {
-                    json = Global.getSettings().readJSONFromCommon(REPORT_FILE_NAME, false);
-                    JSONArray versionSeeds = json.getJSONArray(Global.getSettings().getGameVersion());
-                    versionSeeds.put(seedString);
-                } else {
-                    json = new JSONObject();
-                    JSONArray versionSeeds = new JSONArray();
-                    json.put(Global.getSettings().getGameVersion(), versionSeeds);
-                    versionSeeds.put(seedString);
-                }
+                JSONObject json = Global.getSettings().fileExistsInCommon(REPORT_FILE_NAME) ? Global.getSettings().readJSONFromCommon(REPORT_FILE_NAME, false) : new JSONObject();
+
+                String versionSeedsKey = Global.getSettings().getGameVersion() + " " + LocalDate.now();
+                if (!json.has(versionSeedsKey)) json.put(versionSeedsKey, new JSONArray());
+                json.getJSONArray(versionSeedsKey).put(seedString);
+
                 Global.getSettings().writeJSONToCommon(REPORT_FILE_NAME, json, false);
             } catch (JSONException | IOException e) {
-                print.append("\nFailed to write seed to file!");
+                print.append("\nFailed to write seed to file!\n").append(e);
                 return print.toString();
             }
 
@@ -409,7 +410,7 @@ public class SEEDReport {
             if (sameTesseractVariants)
                 print.append("\nFound all Tesseract variants to be identical! Defeat them in-battle to verify their weapon drops!");
 
-            print.append(String.format("\nWrote seed to Starsector/saves/common/%s:\n\"%s\"", REPORT_FILE_NAME, seedString));
+            print.append("\nWrote seed to Starsector/saves/common/%s:\n\"%s\"".formatted(REPORT_FILE_NAME, seedString));
         }
 
         return print.toString();
@@ -521,8 +522,8 @@ public class SEEDReport {
         return null;
     }
 
-    private String getHyperspaceCoordinates(LocationAPI loc) {
+    private String getHyperspaceCoordinates(Vector2f center, LocationAPI loc) {
         Vector2f vec = loc.getLocation();
-        return String.format("%.2f LY (%.2f, %.2f)", Misc.getDistanceLY(centerOfMass, vec), vec.getX() / GRID_SIZE_MAP_UNITS, vec.getY() / GRID_SIZE_MAP_UNITS);
+        return "%.2f LY (%.2f, %.2f)".formatted(Misc.getDistanceLY(center, vec), vec.getX() / GRID_SIZE_MAP_UNITS, vec.getY() / GRID_SIZE_MAP_UNITS);
     }
 }
